prusti-tests/tests/cargo_verify/failing_crate/output.stderr
error: [Prusti: verification error] precondition might not hold.
 --> src/main.rs:6:5
  |
6 |     requires_large_number(10);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `failing_crate` due to previous error
